# polars-streaming

./: README.md  pyproject.toml  requirements.txt
polars_streaming/: __init__.py  core.py  es_writer.py  exceptions.py  fileProcessor.py  kafkaProcessor.py  readwriter.py  socketProcessor.py  test.ipynb  utils.py  watcher.py
polars_streaming/processors/: fileProcessor.py  kafkaProcessor.py  socketProcessor.py  utils.py
polars_streaming/sinks/: esWriter.py  es_writer.py  mongoWriter.py  sink_utils.py
